PS Java Domain Exercise/psjavadomainexercise-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: psjavadomainexercise-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/psjavadomainexercise-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/psjavadomainexercise-default: "true"
